--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,17 @@
-/* Enter your custom styles here */
+/* Estilos generales de la página */
+
+
+/* Contenedor principal del formulario */ 
+.login-container {
+    justify-content: center;
+    width: 300px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 122, 192, 0.5); /* Borde azul con opacidad */
+  
+  
+  }
+  
