funcionando hasta componente dialog

--- a/webapp/view/Lista.view.xml
+++ b/webapp/view/Lista.view.xml
@@ -1,22 +1,25 @@
 <mvc:View controllerName="ns.project1.controller.Lista"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
+    xmlns:l="sap.ui.layout"
     xmlns:sf="sap.ui.comp.smartform"
     >
     <Page id="page" title="{i18n>title}">
       <content> 
-      <!-- <VBox id="Vbox1">
-      <Button id="btn1"  text="show toast" icon="sap-icon://account" press="handleEventPress" type="Emphasized"/>
-      <Button id="btn2" text="show box" press="handleEventBoxPress" type="Accept"></Button>
-      </VBox>
-      <sf:SmartForm id="sf1"></sf:SmartForm> -->
- 
+
  <Panel id="pan1"
     headerText="{i18n>listaPTitle}">
+    
 <FlexBox id="fxl" justifyContent="End" >
  <VBox id="vb">
 
+  <l:VerticalLayout class="sapUiContentPadding" id="vl1">
     <Button id="btn1" icon="sap-icon://log" text="Log-out" press="onPressLogOut"/>
+    <Button id="ope" icon="sap-icon://accidental-leave"
+			text="{i18n>btnListDialog}"
+			press=".openDialog"
+			ariaHasPopup="Dialog" />
+    </l:VerticalLayout>
     </VBox>
   </FlexBox>
   </Panel>
