--- a/webapp/view/Tabla.view.xml
+++ b/webapp/view/Tabla.view.xml
@@ -1,9 +1,86 @@
-<mvc:View controllerName="ns.project1.controller.Tabla" 
-xmlns:mvc="sap.ui.core.mvc" 
-xmlns="sap.m">
-  <Page id="page" title="{i18n>titleTable}">
-    <content>
-      <Button id="btn2" text="click" ></Button>
-    </content>
-  </Page>
+<mvc:View xmlns:m="sap.m" 
+controllerName="ns.project1.controller.Tabla" 
+xmlns="sap.ui.webc.main" xmlns:fiori="sap.ui.webc.fiori" 
+xmlns:mvc="sap.ui.core.mvc" height="100%">
+<m:Panel id="panel1" >
+ <m:Button 
+                    id="btnRegresar_01" 
+                    text="Regresar" 
+                    type="Back"
+                    press="onNavBack"/>
+</m:Panel>
+
+	<fiori:Page id="_IDGenPage1">
+		<fiori:header>
+			<fiori:Bar id="_IDGenBar1">
+				<fiori:middleContent>
+					<Title id="_IDGenTitle1" text="Doctores"></Title>
+				</fiori:middleContent>
+			</fiori:Bar>
+		</fiori:header>
+		<fiori:content>
+			<Toast id="demoToast" duration="1000"></Toast>
+			<Table
+				id="idProductsTable"
+				stickyColumnHeader="true"
+				rowClick="handleRowClick"
+				mode="SingleSelect"
+				selectionChange="handleSelectionChange"
+				rows="{
+					path: '/ProductCollection',
+					sorter: {
+						path: 'Name'
+					}
+				}">
+				<columns>
+					<TableColumn id="_IDGenTableColumn1">
+						<Label id="_IDGenLabel1" text="Nombre" />
+					</TableColumn>
+					<TableColumn id="_IDGenTableColumn2">
+						<Label id="_IDGenLabel2" text="Edad" />
+					</TableColumn>
+					<TableColumn id="_IDGenTableColumn3">
+						<Label id="_IDGenLabel3" text="Especialidad" />
+					</TableColumn>
+					<TableColumn id="_IDGenTableColumn4">
+						<Label id="_IDGenLabel4" text="Contrato" />
+					</TableColumn>
+					<TableColumn id="_IDGenTableColumn5">
+						<Label id="_IDGenLabel5" text="Sueldo" />
+					</TableColumn>
+				</columns>
+				<rows>
+					<TableRow id="_IDGenTableRow1" type="Active">
+						<cells>
+							<TableCell id="_IDGenTableCell1">
+								<content>
+									<Label id="_IDGenLabel6" text="{Name} ({ProductId})"/>
+								</content>
+							</TableCell>
+							<TableCell id="_IDGenTableCell2">
+								<content>
+									<Label id="_IDGenLabel7" text="{SupplierName}" />
+								</content>
+							</TableCell>
+							<TableCell id="_IDGenTableCell3">
+								<content>
+									<Label id="_IDGenLabel8" text="{Width} x {Depth} x {Height} {DimUnit}" />
+								</content>
+							</TableCell>
+							<TableCell id="_IDGenTableCell4">
+								<content>
+									<Label id="_IDGenLabel9" text="{WeightMeasure} {WeightUnit}" />
+								</content>
+							</TableCell>
+							<TableCell id="_IDGenTableCell5">
+								<content>
+									<Label id="_IDGenLabel10" text="{Price} {CurrencyCode}" />
+								</content>
+							</TableCell>
+						</cells>
+					</TableRow>
+				</rows>
+			</Table>
+		</fiori:content>
+	</fiori:Page>
 </mvc:View>
