--- a/webapp/view/Tabla.view.xml
+++ b/webapp/view/Tabla.view.xml
@@ -21,7 +21,10 @@ xmlns:mvc="sap.ui.core.mvc" height="100%">
 		<fiori:content>
 			<Toast id="demoToast" duration="1000"></Toast>
 			<!-- path:aqui va el nombre del json model
-	             path: 'Name' dentro del sorter es el atributo piloto ordenador		
+	             path: 'Name' dentro del sorter es el atributo piloto ordenador	
+				 mode= "SingleSelect" puede cambiar por multiselect para poder seleccionar mas de un row	
+			     rowClick="handleRowClick" metodo cuando se le da click encima
+				 selectionChange="handleSelectionChange" cuando se tiene ativado multiselect funcion
 			-->
 			<Table
 				id="idProductsTable"
@@ -36,8 +39,13 @@ xmlns:mvc="sap.ui.core.mvc" height="100%">
 						path: 'SupplierName'
 					}
 				}">
-				
+				<!--en toda la parte de las colums van las columnas y los textos
+				    de cada columna dentro de una etiqueta, debo de ignorar algunos
+					id como en el caso de las etiquetas que no son nadamas que texto-->
 				<columns>
+				<TableColumn id="_IDGenTableColumnid">
+						<Label id="_IDGenLabelid" text="Id" />
+					</TableColumn>
 					<TableColumn id="_IDGenTableColumn1">
 						<Label id="_IDGenLabel1" text="Nombre" />
 					</TableColumn>
@@ -54,32 +62,38 @@ xmlns:mvc="sap.ui.core.mvc" height="100%">
 						<Label id="_IDGenLabel5" text="Sueldo" />
 					</TableColumn>
 				</columns>
+				<!--Esta parte es la mas importante ya que es la de los renglones-->
 				<rows>
 					<TableRow id="_IDGenTableRow1" type="Active">
 						<cells>
+						<TableCell id="_IDGenTableCell6">
+								<content>
+									<Label id="_IDGenLabeid" text="{Id}"/>
+								</content>
+							</TableCell>
 							<TableCell id="_IDGenTableCell1">
 								<content>
-									<Label id="_IDGenLabel6" text="{Name} ({ProductId})"/>
+									<Label id="_IDGenLabel6" text="{Nombre}"/>
 								</content>
 							</TableCell>
 							<TableCell id="_IDGenTableCell2">
 								<content>
-									<Label id="_IDGenLabel7" text="{SupplierName}" />
+									<Label id="_IDGenLabel7" text="{Edad}" />
 								</content>
 							</TableCell>
 							<TableCell id="_IDGenTableCell3">
 								<content>
-									<Label id="_IDGenLabel8" text="{Width} x {Depth} x {Height} {DimUnit}" />
+									<Label id="_IDGenLabel8" text="{Especialidad}" />
 								</content>
 							</TableCell>
 							<TableCell id="_IDGenTableCell4">
 								<content>
-									<Label id="_IDGenLabel9" text="{WeightMeasure} {WeightUnit}" />
+									<Label id="_IDGenLabel9" text="{Contrato}" />
 								</content>
 							</TableCell>
 							<TableCell id="_IDGenTableCell5">
 								<content>
-									<Label id="_IDGenLabel10" text="{Price} {CurrencyCode}" />
+									<Label id="_IDGenLabel10" text="{Sueldo}" />
 								</content>
 							</TableCell>
 						</cells>
