--- a/webapp/view/MRecomendaciones.view.xml
+++ b/webapp/view/MRecomendaciones.view.xml
@@ -1,57 +1,40 @@
-<mvc:View controllerName="ns.project1.controller.MRecomendaciones"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc">
-   <Page id="MRecomendaciones" title="{i18n>title}">
-   <Label id="lbl1" text="Vista de recomendaciones"></Label>
-   
-   <content >
-  <Panel id="panel1">
-  <ComboBox
-					id="comboBox"  
-					items=""
-					width="100%"
-					placeholder="Doctor (required)" 
-					change="handleChangeInspector"
-					
-					 >
-					 <!-- items="{AsnModel>/Inspectores}"    asi era  items-->
-					<!-- <core:Item id="_IDGenItem1" key="{AsnModel>Id}" text="{AsnModel>Name}" /> -->
-				</ComboBox>
-  </Panel>
-
-
-     <Panel id="pan1">
-     <VBox id="vb1">
-        
-                    <IllustratedMessage id="_IDGenIllustratedMessage1" 
-                      enableVerticalResponsiveness="true"
-                      enableDefaultTitleAndDescription="false"
-                      description="Ingrese el ID del doctor para ver las recomendaciones que se le han escrito"
-                      illustrationSize="Auto"
-                      illustrationType="sapIllus-SearchEarth"/>
-    </VBox>
-  </Panel>   
-   </content>
-
-   <footer>
-			<OverflowToolbar id="otbFooter">
-				<ToolbarSpacer id="_IDGenToolbarSpacer1"/>
-				<Button id="_IDGenButton1" type="Accept" text="Accept">
-					<layoutData><OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData1" priority="NeverOverflow" /></layoutData>
-				</Button>
-				<Button id="_IDGenButton2" type="Reject" text="Reject">
-					<layoutData><OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData2" priority="NeverOverflow" /></layoutData>
-				</Button>
-				<OverflowToolbarButton id="_IDGenOverflowToolbarButton1" tooltip="Delete" text="Delete" icon="sap-icon://delete"/>
-				<OverflowToolbarButton id="_IDGenOverflowToolbarButton2" tooltip="Edit" text="Edit" icon="sap-icon://edit"/>
-				<OverflowToolbarButton id="_IDGenOverflowToolbarButton3" tooltip="Add" text="Add" icon="sap-icon://add"/>
-				<OverflowToolbarButton id="_IDGenOverflowToolbarButton4" tooltip="Favorite" text="Favorite" icon="sap-icon://favorite"/>
-				<OverflowToolbarButton id="_IDGenOverflowToolbarButton5" tooltip="Flag" text="Flag" icon="sap-icon://flag"/>
-				<OverflowToolbarToggleButton id="_IDGenOverflowToolbarToggleButton1" tooltip="Toggle" text="Toggle" icon="sap-icon://touch" press="onTogglePress"/>
-
-			</OverflowToolbar>
-		</footer>
-   </Page>
-
-
+<mvc:View
+  controllerName="ns.project1.controller.MRecomendaciones"
+  xmlns="sap.m"
+  xmlns:mvc="sap.ui.core.mvc"
+  xmlns:core="sap.ui.core">
+  <Page id="_IDGenPage1" title="{i18n>title}">
+    <content>
+      <FlexBox id="_IDGenFlexBox1" justifyContent="Start">
+        <VBox id="_IDGenVBox1">
+          <Text id="_IDGenText1" text="Favor de seleccionar el nombre del doctor:" class="sapUiTinyMarginBottom" />
+          <ComboBox
+            id="comboBox"
+            items="{AsnModel>/Inspectores}"
+            width="100%"
+            placeholder="Doctor (required)"
+            change="handleChangeInspector">
+            <core:Item id="_IDGenItem1" key="{AsnModel>Id}" text="{AsnModel>Name}" />
+          </ComboBox>
+        </VBox>
+      </FlexBox>
+      <Panel id="_IDGenPanel1">
+        <VBox id="vboxBusqueda" >
+          <IllustratedMessage
+            id="_IDGenIllustratedMessage1"
+            enableVerticalResponsiveness="true"
+            enableDefaultTitleAndDescription="false"
+            description="Ingrese el ID del doctor para ver las recomendaciones que se le han escrito"
+            illustrationSize="Auto"
+            illustrationType="sapIllus-SearchEarth"
+          />
+        </VBox>
+      </Panel>
+    </content>
+    <footer>
+      <OverflowToolbar id="_IDGenOverflowToolbar1">
+        <!-- Agrega los botones del footer según tus necesidades -->
+      </OverflowToolbar>
+    </footer>
+  </Page>
 </mvc:View>
