--- a/webapp/view/Tabla.view.xml
+++ b/webapp/view/Tabla.view.xml
@@ -1,109 +1,78 @@
-<mvc:View xmlns:m="sap.m" 
-controllerName="ns.project1.controller.Tabla" 
-xmlns="sap.ui.webc.main"
- xmlns:fiori="sap.ui.webc.fiori" 
-xmlns:mvc="sap.ui.core.mvc"
-xmlns:uxap="sap.uxap" 
-height="100%">
-<m:Panel id="panel1" >
- <m:Button 
-                    id="btnRegresar_01" 
-                    text="Regresar" 
-                    type="Back"
-                    press="onNavBack"/>
-</m:Panel>
+<mvc:View xmlns:cards="sap.f.cards" xmlns="sap.m" 
+    controllerName="ns.project1.controller.Tabla" 
+    xmlns:mvc="sap.ui.core.mvc"
+    height="100%">
 
-	<fiori:Page id="_IDGenPage1">
-		<fiori:header>
-			<fiori:Bar id="_IDGenBar1">
-				<fiori:middleContent>
-					<Title id="_IDGenTitle1" text="Doctores"></Title>
-				</fiori:middleContent>
-			</fiori:Bar>
-		</fiori:header>
-		<fiori:content>
-			<Toast id="demoToast" duration="1000"></Toast>
-			<!-- path:aqui va el nombre del json model
-	             path: 'Name' dentro del sorter es el atributo piloto ordenador	
-				 mode= "SingleSelect" puede cambiar por multiselect para poder seleccionar mas de un row	
-			     rowClick="handleRowClick" metodo cuando se le da click encima
-				 selectionChange="handleSelectionChange" cuando se tiene ativado multiselect funcion
-			-->
-			<Table
-				id="idProductsTable"
-				stickyColumnHeader="true"
-				rowClick="handleRowClick"
-				mode="SingleSelect"
-				selectionChange="handleSelectionChange"
-				rows="{
-					
-					path: 'DoctorsReport>/DoctorsReport', 
-					sorter: {
-						path: 'Nombre'
-					}
-				}">
-				<!--en toda la parte de las colums van las columnas y los textos
-				    de cada columna dentro de una etiqueta, debo de ignorar algunos
-					id como en el caso de las etiquetas que no son nadamas que texto-->
-				<columns>
-				<TableColumn id="_IDGenTableColumnid">
-						<Label id="_IDGenLabelid" text="Id" />
-					</TableColumn>
-					<TableColumn id="_IDGenTableColumn1">
-						<Label id="_IDGenLabel1" text="Nombre" />
-					</TableColumn>
-					<TableColumn id="_IDGenTableColumn2">
-						<Label id="_IDGenLabel2" text="Edad" />
-					</TableColumn>
-					<TableColumn id="_IDGenTableColumn3">
-						<Label id="_IDGenLabel3" text="Especialidad" />
-					</TableColumn>
-					<TableColumn id="_IDGenTableColumn4">
-						<Label id="_IDGenLabel4" text="Contrato" />
-					</TableColumn>
-					<TableColumn id="_IDGenTableColumn5">
-						<Label id="_IDGenLabel5" text="Sueldo" />
-					</TableColumn>
-				</columns>
-				<!--Esta parte es la mas importante ya que es la de los renglones-->
-				<rows>
-					<TableRow id="_IDGenTableRow1" type="Active">
-						<cells>
-						<TableCell id="_IDGenTableCell6">
-								<content>
-									<Label id="_IDGenLabeid" text="{DoctorsReport>Id}"/>
-								</content>
-							</TableCell>
-							<TableCell id="_IDGenTableCell1">
-								<content>
-									<Label id="_IDGenLabel6" text="{DoctorsReport>Nombre}"/>
-								</content>
-							</TableCell>
-							<TableCell id="_IDGenTableCell2">
-								<content>
-									<Label id="_IDGenLabel7" text="{DoctorsReport>Edad}" />
-								</content>
-							</TableCell>
-							<TableCell id="_IDGenTableCell3">
-								<content>
-									<Label id="_IDGenLabel8" text="{DoctorsReport>Especialidad}" />
-								</content>
-							</TableCell>
-							<TableCell id="_IDGenTableCell4">
-								<content>
-									<Label id="_IDGenLabel9" text="{DoctorsReport>Contrato}" />
-								</content>
-							</TableCell>
-							<TableCell id="_IDGenTableCell5">
-								<content>
-									<Label id="_IDGenLabel10" text="{DoctorsReport>Sueldo}" />
-								</content>
-							</TableCell>
-						</cells>
-					</TableRow>
-				</rows>
-			</Table>
-		</fiori:content>
-		
-	</fiori:Page>
+    <Panel id="panel1" >
+        <Button 
+            id="btnRegresar_01" 
+            text="Regresar" 
+            type="Back"
+            press="onNavBack"/>
+    </Panel>
+
+<Toolbar id="_IDGenToolbar1">
+            <Title id="_IDGenTitle1" text=""/>
+            <ToolbarSpacer id="_IDGenToolbarSpacer1"/>
+            <SearchField id="_IDGenSearchField1" 
+               width="50%" 
+               search="onFilterDoctores"
+			   liveChange="onFilterDoctores"
+			   
+			   />
+         </Toolbar>
+
+
+         
+
+    <Page id="_IDGenPage1">
+   
+        <content>
+		<!-- quite el radio button de la tabla modificando la propiedad mode ya que cuenta con None MultiSelect y SingleSelect -->
+            <Table
+                id="idDoctorsTable"
+  
+                mode="None"
+                selectionChange="handleSelectionChange"
+                items="{
+                    path: 'DoctorsReport>/DoctorsReport', 
+                    sorter: {
+                        path: 'Nombre'
+                    }
+                }">
+                <columns>
+                    <Column id="_IDGenTableColumnid">
+                        <Label id="_IDGenLabelid" text="Id" />
+                    </Column>
+                    <Column id="_IDGenTableColumn1">
+                        <Label id="_IDGenLabel1" text="Nombre" />
+                    </Column>
+                    <Column id="_IDGenTableColumn2">
+                        <Label id="_IDGenLabel2" text="Edad" />
+                    </Column>
+                    <Column id="_IDGenTableColumn3">
+                        <Label id="_IDGenLabel3" text="Especialidad" />
+                    </Column>
+                    <Column id="_IDGenTableColumn4">
+                        <Label id="_IDGenLabel4" text="Contrato" />
+                    </Column>
+                    <Column id="_IDGenTableColumn5">
+                        <Label id="_IDGenLabel5" text="Sueldo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem id="_IDGenTableRow1" type="Active">
+                        <cells>
+                            <ObjectIdentifier id="_IDGenTableCell6" title="{DoctorsReport>Id}" />
+                            <ObjectIdentifier id="_IDGenTableCell1" title="{DoctorsReport>Nombre}" />
+                            <ObjectIdentifier id="_IDGenTableCell2" title="{DoctorsReport>Edad}" />
+                            <ObjectIdentifier id="_IDGenTableCell3" title="{DoctorsReport>Especialidad}" />
+                            <ObjectIdentifier id="_IDGenTableCell4" title="{DoctorsReport>Contrato}" />
+                            <ObjectIdentifier id="_IDGenTableCell5" title="{DoctorsReport>Sueldo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </content>
+    </Page>
 </mvc:View>
