--- a/webapp/view/MRecomendaciones.view.xml
+++ b/webapp/view/MRecomendaciones.view.xml
@@ -4,11 +4,45 @@
   xmlns:mvc="sap.ui.core.mvc"
   xmlns:core="sap.ui.core"
   xmlns:l="sap.ui.layout"
-	xmlns:f="sap.ui.layout.form"
+  xmlns:f="sap.ui.layout.form"
+  xmlns:tnt="sap.tnt"
 
   >
   <Page id="_IDGenPage1" title="{i18n>title}">
     <content>
+
+	
+		<tnt:ToolHeader id="shellLikeToolHeader" class="sapUiTinyMargin">
+			
+			<Image id="_IDGenImage1" src="test-resources/sap/tnt/images/SAP_Logo.png" decorative="false" press="onLogoPressed" tooltip="SAP Logo">
+				<layoutData>
+					<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData2" priority="NeverOverflow"/>
+				</layoutData>
+			</Image>
+			<Title text="Hospital Control" wrapping="false" id="productName">
+				<layoutData>
+					<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData3" priority="Disappear"/>
+				</layoutData>
+			</Title>
+			<Text text="User:" wrapping="false" id="secondTitle">
+				<layoutData>
+					<OverflowToolbarLayoutData id="_IDGenOverflowToolbarLayoutData4" priority="Disappear"/>
+				</layoutData>
+			</Text>
+			
+			
+			
+			<tnt:ToolHeaderUtilitySeparator id="_IDGenToolHeaderUtilitySeparator1"/>
+			<ToolbarSpacer id="_IDGenToolbarSpacer6" width="1.125rem"/>
+			<!-- Boton para mostrar el nombre del usuario -->
+				 
+                 <Button id="btnUser" icon="sap-icon://person-placeholder" type="Transparent" tooltip='Click para ver usuario' press="showUser" ></Button>
+			<!-- sap-icon://list    este es el icono de la lista-->
+			 <Button id="btnListView" icon="sap-icon://list" type="Transparent" tooltip='Lista de recomendaciones' press="openDialogView" ></Button>
+		</tnt:ToolHeader>
+	
+<!-- fin del header -->
+
       <FlexBox id="_IDGenFlexBox1" justifyContent="Start">
         <VBox id="_IDGenVBox1">
           <Text id="_IDGenText1" text="Favor de seleccionar el nombre del doctor:" class="sapUiTinyMarginBottom" />
@@ -24,7 +58,10 @@
       </FlexBox>
       
       <Panel id="_IDGenPanel1">
-   
+      <VBox id="userVbox">
+
+	  
+	    </VBox>
         <VBox id="vboxBusqueda" >
           <IllustratedMessage
             id="_IDGenIllustratedMessage1"
@@ -36,7 +73,7 @@
           />
         </VBox>
 
-     
+       
         <VBox id="vboxFormulario" class="sapUiSmallMargin" visible="false">
 		<f:Form id="FormToolbar"
 			editable="true"
@@ -45,6 +82,7 @@
 				<Toolbar id="TB1">
 					<Title id="Title1" text="Recomendaciones"/>
 					<ToolbarSpacer id="_IDGenToolbarSpacer1" />
+					
 					
 				</Toolbar>
 			</f:toolbar>
@@ -109,15 +147,20 @@
 							<TextArea
 				id="comentaryBox"
 				placeholder="Escriba aqui su queja o sugerencia."
-			  maxLength="100"
-				change="handleChange"
+			    maxLength="100"
+				change="textAreaChange"
 				showExceededText="true"
 				rows="4"
+				required="true"
+			 
 				/>
-				
+			
             	</f:fields>
 						</f:FormElement>
+					
 					</f:formElements>
+              
+
 				</f:FormContainer>
 			</f:formContainers>
 		</f:Form>
